--- a/pizzaProject/package.json
+++ b/pizzaProject/package.json
@@ -28,6 +28,7 @@
         "redux-thunk": "^2.4.2"
     },
     "devDependencies": {
+        "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.50.0",
