--- a/pizzaProject/tsconfig.json
+++ b/pizzaProject/tsconfig.json
@@ -1,5 +1,12 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@assets/*": ["src/assets/*"],
+            "@mainTypes/*": ["src/mainTypes/*"],
+            "@redux/*": ["src/redux/*"],
+            "@components/*": ["src/components/*"],
+        },
         "target": "ESNext",
         "useDefineForClassFields": true,
         "lib": [
@@ -27,5 +34,6 @@
         {
             "path": "./tsconfig.node.json"
         }
-    ]
+    ],
+
 }
