sorted imports and simplified code

--- a/pizzaProject/.prettierrc
+++ b/pizzaProject/.prettierrc
@@ -6,5 +6,10 @@
     "tabWidth": 4,
     "indentStyle": "space",
     "useTabs": false,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "importOrder": ["^@components/(.*)$", "^\\.(\/[a-zA-Z]+)+$", "^@redux/(.*)$", "^@mainTypes/(.*)$", "^@assets/.*$", "./s.module.css", "s.css", "^[./]"],
+    "importOrderSeparation": false, 
+    "importOrderSortSpecifiers": true,
+    "importOrderCaseInsensitive": true,
+    "importOrderGroupNamespaceSpecifiers": true
 }
