--- a/pizzaProject/package.json
+++ b/pizzaProject/package.json
@@ -19,7 +19,6 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "formik": "^2.2.9",
-        "prettier": "^2.8.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
@@ -28,6 +27,7 @@
         "redux-thunk": "^2.4.2"
     },
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.0.0",
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
@@ -40,6 +40,7 @@
         "eslint-plugin-n": "^15.6.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.32.2",
+        "prettier": "^2.8.3",
         "typescript": "^4.9.5",
         "vite": "^4.0.0"
     }
