--- a/pizzaProject/package.json
+++ b/pizzaProject/package.json
@@ -11,6 +11,7 @@
         "lint:fix": "eslint src/**/*.ts{,x} --fix"
     },
     "dependencies": {
+        "axios": "^1.3.1",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.6.0",
