--- a/pizzaProject/tsconfig.json
+++ b/pizzaProject/tsconfig.json
@@ -3,17 +3,13 @@
         "baseUrl": ".",
         "paths": {
             "@assets/*": ["src/assets/*"],
-            "@mainTypes/*": ["src/mainTypes/*"],
+            "@utils/*": ["src/utils/*"],
             "@redux/*": ["src/redux/*"],
-            "@components/*": ["src/components/*"],
+            "@components/*": ["src/components/*"]
         },
         "target": "ESNext",
         "useDefineForClassFields": true,
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ESNext"
-        ],
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": false,
@@ -27,13 +23,10 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": [
-        "src"
-    ],
+    "include": ["src"],
     "references": [
         {
             "path": "./tsconfig.node.json"
         }
-    ],
-
+    ]
 }
