changed folder structure(added pages)

--- a/pizzaProject/.prettierrc
+++ b/pizzaProject/.prettierrc
@@ -7,7 +7,7 @@
     "indentStyle": "space",
     "useTabs": false,
     "trailingComma": "none",
-    "importOrder": ["^@components/(.*)$", "^\\.(\/[a-zA-Z]+)+$", "^@redux/(.*)$", "^@mainTypes/(.*)$", "^@assets/.*$", "./s.module.css", "s.css", "^[./]"],
+    "importOrder": ["^@components/(.*)$", "^(\\.|\\.\\.)(\\.?\/[a-zA-Z]+)+$", "^@redux/(.*)$", "^@mainTypes/(.*)$", "^@assets/.*$", "./s.module.css", "s.css", "^[./]"],
     "importOrderSeparation": false, 
     "importOrderSortSpecifiers": true,
     "importOrderCaseInsensitive": true,
