--- a/pizzaProject/tsconfig.json
+++ b/pizzaProject/tsconfig.json
@@ -5,7 +5,8 @@
             "@assets/*": ["src/assets/*"],
             "@utils/*": ["src/utils/*"],
             "@redux/*": ["src/redux/*"],
-            "@components/*": ["src/components/*"]
+            "@components/*": ["src/components/*"],
+            "@pages/*": ["src/pages/*"]
         },
         "target": "ESNext",
         "useDefineForClassFields": true,
