--- a/pizzaProject/package.json
+++ b/pizzaProject/package.json
@@ -22,6 +22,7 @@
         "formik": "^2.2.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-loading-skeleton": "^3.1.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
         "redux": "^4.2.0",
