--- a/pizzaProject/.eslintrc.json
+++ b/pizzaProject/.eslintrc.json
@@ -5,8 +5,6 @@
     },
     "extends": [
         "eslint:recommended",
-        "airbnb/hooks",
-        "airbnb-typescript",
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:@typescript-eslint/recommended",
@@ -22,18 +20,12 @@
         },
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "tsconfigRootDir": "pizzaProject",
+        "tsconfigRootDir": "./",
         "project": ["tsconfig.json"]
     },
     // Configuring third-party plugins
     "plugins": ["react", "@typescript-eslint"],
-    // Resolve imports
     "settings": {
-        "import/resolver": {
-            "typescript": {
-                "project": "**/tsconfig.json"
-            }
-        },
         "react": {
             "version": "18.x"
         }
@@ -50,33 +42,6 @@
                 "types": {
                     "{}": false
                 }
-            }
-        ],
-        "prettier/prettier": [
-            "error",
-            {
-                "semi": false,
-                "printWidth": 120,
-                "endOfLine": "lf",
-                "singleQuote": true,
-                "tabWidth": 4,
-                "indentStyle": "space",
-                "useTabs": false,
-                "trailingComma": "none",
-                "importOrder": [
-                    "^@components/(.*)$",
-                    "^(\\.|\\.\\.)(\\.?/[a-zA-Z]+)+$",
-                    "^@redux/(.*)$",
-                    "^@mainTypes/(.*)$",
-                    "^@assets/.*$",
-                    "./s.module.css",
-                    "s.css",
-                    "^[./]"
-                ],
-                "importOrderSeparation": false,
-                "importOrderSortSpecifiers": true,
-                "importOrderCaseInsensitive": true,
-                "importOrderGroupNamespaceSpecifiers": true
             }
         ],
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
