changed eslint config, little fixes

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,8 +7,17 @@
     "indentStyle": "space",
     "useTabs": false,
     "trailingComma": "none",
-    "importOrder": ["^@components/(.*)$", "^(\\.|\\.\\.)(\\.?\/[a-zA-Z]+)+$", "^@redux/(.*)$", "^@mainTypes/(.*)$", "^@assets/.*$", "./s.module.css", "s.css", "^[./]"],
-    "importOrderSeparation": false, 
+    "importOrder": [
+        "^@components/(.*)$",
+        "^(\\.|\\.\\.)(\\.?/[a-zA-Z]+)+$",
+        "^@redux/(.*)$",
+        "^@mainTypes/(.*)$",
+        "^@assets/.*$",
+        "./s.module.css",
+        "s.css",
+        "^[./]"
+    ],
+    "importOrderSeparation": false,
     "importOrderSortSpecifiers": true,
     "importOrderCaseInsensitive": true,
     "importOrderGroupNamespaceSpecifiers": true
