--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview",
-        "lint": "tsc --noEmit && eslint src/**/*.ts{,x} --cache --max-warnings=0",
-        "lint:fix": "eslint src/**/*.ts{,x} --fix"
+        "preview": "vite preview"
     },
     "dependencies": {
         "axios": "^1.3.1",
-        "eslint-plugin-prettier": "^4.2.1",
         "formik": "^2.2.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -31,11 +28,6 @@
         "@typescript-eslint/parser": "^5.50.0",
         "@vitejs/plugin-react": "^3.0.0",
         "eslint": "^8.33.0",
-        "eslint-config-standard-with-typescript": "^34.0.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-n": "^15.6.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.32.2",
         "prettier": "^2.8.3",
         "typescript": "^4.9.5",
         "vite": "^4.0.0"
